--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,10 +4,11 @@ name="Android"
 platform="Android"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="resources"
+export_files=PoolStringArray( "res://assets/background.png", "res://assets/ball.png", "res://assets/border.png", "res://assets/brick.png", "res://assets/platform.png", "res://fonts/ubuntu.ttf", "res://icon.png", "res://scenes/ball.tscn", "res://scenes/brick.tscn", "res://scenes/game.tscn", "res://scenes/platform.tscn", "res://scripts/ball.gd", "res://scripts/brick.gd", "res://scripts/game.gd", "res://scripts/level.gd", "res://scripts/platform.gd" )
 include_filter=""
 exclude_filter=""
-export_path="builds/Project - Breakout-0.1.apk"
+export_path="builds/Project - Breakout-0.1.1.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -23,19 +24,19 @@ custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
 command_line/extra_args=""
-version/code=1
-version/name="0.1"
-package/unique_name="org.godotengine.$genname"
+version/code=2
+version/name="0.1.1"
+package/unique_name="com.projectbreakout.$genname"
 package/name="Project Breakout"
 package/signed=true
 screen/immersive_mode=true
-screen/orientation=0
+screen/orientation=1
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
 screen/opengl_debug=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="res://icon.png"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
